--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Clair vulnerability dashboard for a k8s cluster",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "repository": {
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/karrieretutor/k8s-clair-dashboard/issues"
   },
-  "homepage": "https://github.com/karrieretutor/k8s-clair-dashboard#readme"
+  "homepage": "https://github.com/karrieretutor/k8s-clair-dashboard#readme",
+  "dependencies": {
+    "clair-client": "^1.3.0",
+    "express": "^4.16.4",
+    "kubernetes-client": "^6.3.2"
+  }
 }
