--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "homepage": "https://github.com/karrieretutor/k8s-clair-dashboard#readme",
   "dependencies": {
+    "@kubernetes/client-node": "^0.7.1",
     "clair-client": "^1.3.0",
-    "express": "^4.16.4",
-    "kubernetes-client": "^6.3.2"
+    "express": "^4.16.4"
   }
 }
